[package]
name = "img2ascii"
version = "0.1.1"
description = "ASCII art generating command-line filter"
authors = ["Dan <dx2718@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
ascii_art = { path = "../ascii_art" }
clap = { version = "^3.1", features = ["derive"] }
fontconfig = { version = "^0.5", features = ["dlopen"] }