[package]
name = "utils"
version = "0.1.0"
edition = "2021"
description = "ASCII art-related utilitiy programs"
license = "MIT"

[dependencies]
ascii_art = { path = "../ascii_art" }
dumb_cgi = { git = "https://github.com/d2718/dumb-cgi", branch = "main" }
fontconfig = { version = "^0.5", features = ["dlopen"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

log = "^0.4"
simplelog = "^0.12"