[package]
name = "utils"
version = "0.2.1"
authors = ["Dan <dx2718@gmail.com"]
description = "ASCII art-related utilitiy programs"
edition = "2021"
license = "MIT"

[dependencies]
ascii_art = { path = "../ascii_art" }
dumb_cgi = { git = "https://github.com/d2718/dumb-cgi", branch = "main" }
fontconfig = { version = "^0.5", features = ["dlopen"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

log = "^0.4"
simplelog = "^0.12"